fix collapse breaking during any other action

--- a/client/css/sprintr.styl
+++ b/client/css/sprintr.styl
@@ -36,7 +36,7 @@ animate()
 
 .collapsed
     //max-height 0
-    //display none
+    display none
 
 ul.tasks
     margin-left 15px
